# fast-array-rs

./: Cargo.toml  README.md  xxx
benches/: benchmark.rs
src/: lib.rs  macros.rs  prelude.rs
src/fast_array/: fast_array.rs  fast_array_basics.rs  mod.rs  nightly.rs
src/fast_iterator/: fast_iterator.rs  fast_iterator_basics.rs  mod.rs  nightly.rs  rayon.rs
src/fast_matrix/: fast_matrix.rs  fast_matrix_basics.rs  fast_matrix_maths.rs  mod.rs
