[package]
name = "fast-collections"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "*", optional = true }
rayon = { version = "*", optional = true }
# rayon = { version = "*" }
# serde = { version = "*" }

[profile.test]
codegen-units = 1
lto = true
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[features]
serde = ["dep:serde"]
nightly = []
simd = ["nightly"]
rayon = ["dep:rayon"]

[dev-dependencies]
criterion = {version = "0.5.1", default-features = false, features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false